# scipy_doctest

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  README.rst  _checker.py  changelog.html  contributors.md  genindex.html  implementation.html  index.html  objects.inv  plugin.html  pyproject.toml  run.py  run_on_scipy.py  scipy_tutorials.py  search.html  searchindex.js  test_module.py
.github/workflows/: docs-build.yml  docs.yml  pip.yml  scipy.yml  test.yml
_sources/: changelog.md.txt  index.md.txt  plugin.md.txt
docs/: changelog.md  conf.py  frontend.md  implementation.md  index.md  plugin.md  requirements.txt
docs/source/: conf.py  index.rst  plugin.rst
scipy_doctest/: __init__.py  conftest.py  frontend.py  impl.py  plugin.py  util.py
scipy_doctest/tests/: failure_cases.py  failure_cases_2.py  finder_cases.py  finder_cases_2.py  local_file_cases.py  module_cases.py  scipy_ndimage_tutorial_clone.rst  stopwords_cases.py  test_finder.py  test_parser.py  test_pytest_configuration.py  test_runner.py  test_skipmarkers.py  test_testfile.py  test_testmod.py
scpdt/: __init__.py  __main__.py  _checker.py  _frontend.py  _impl.py  _run.py  _util.py  conftest.py  frontend.py  impl.py  plugin.py  util.py
scpdt/_tests/: __init__.py  failure_cases.py  failure_cases_2.py  finder_cases.py  local_file_cases.py  module.py  module_cases.py  scipy_linalg_tutorial_clone.rst  test_finder.py  test_parser.py  test_runner.py  test_skipmarkers.py  test_testfile.py  test_testmod.py
scpdt/tests/: conftest.py  failure_cases.py  failure_cases_2.py  local_file_cases.py  module_cases.py  stopwords_cases.py  test_finder.py  test_parser.py  test_pytest_configuration.py  test_runner.py  test_skipmarkers.py  test_stopwords.py  test_testfile.py  test_testmod.py
