[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scipy_doctest"
maintainers = [
    {name = "SciPy developers", email = "scipy-dev@python.org"}
    ]
readme = "README.md"
requires-python = ">=3.8"
license={file = "LICENSE"}
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Framework :: Pytest",
]
dependencies  = [
    "numpy>=1.19.5",
    "pytest",
]

[project.optional-dependencies]
test = [
    "scipy",
    "matplotlib"
]
doc = [
    "furo==2024.8.6",
    "myst-parser==4.0.0",
    "sphinx==8.1.3",
    "sphinx-copybutton==0.5.2"
]

[project.urls]
Home = "https://github.com/scipy/scipy_doctest"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
"scipy_doctest/tests/module_cases.py" = ["E501"]
"scipy_doctest/tests/local_file_cases.py" = ["E501"]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--verbose --color=yes"

# specify project entrypoints to make each plugin discoverable by pytest
# ref: https://docs.pytest.org/en/latest/how-to/writing_plugins.html#making-your-plugin-installable-by-others
[project.entry-points.pytest11]
scipy_doctest = "scipy_doctest.plugin"
